# pm-attendance-tracker

./: Dockerfile  LICENSE  PRIVACY.md  README.md  general.py  main.py  pyproject.toml  tracking.py
.github/scripts/: pre-commit
.github/workflows/: docker-build-and-tag.yaml  docker-build.yaml  ruff.yaml
src/pm_attendance_tracker/: __init__.py  main.py  tracking.py
